# cirious_codex_config

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_config.rs  basic_usage.rs  cli_overrides.rs  live_reload.rs  nested_config.rs  secret_resolution.rs
src/: builder.rs  format.rs  lib.rs  merge.rs  secrets.rs  utils.rs  watch.rs
tests/: builder_test.rs  cli_tests.rs  env_nested_test.rs  integration_test.rs  secret_tests.rs  watch_test.rs
